--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -9,6 +9,7 @@
             flex-wrap: nowrap;
             flex-shrink: 0;
             padding: 0 10px;
+            color: #565656;
         }
     }
     .typeName {
