--- a/src/views/BookDetail/index.scss
+++ b/src/views/BookDetail/index.scss
@@ -2,11 +2,18 @@
     .bookInfo {
         display: flex;
         margin: 10px;
-        img {
+        .imgWrapper {
             width: 100px;
             padding-right: 10px;
+            flex-shrink: 0;
+            img {
+                width: 100%;
+                height: auto;
+                max-width: 100%;
+                display: block;
+            }
         }
-        .rightInfo{
+        .rightInfo {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
